# kinectazure-bug-1546

./: CMakeLists.txt  main.cpp
cmake/: find-kinect.cmake
